public/files/week7/week7-3-eks-lab/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
